--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +21,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sonar Navigator</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icons/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/icons/site.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/icons/safari-pinned-tab.svg" color="#6e6e6e">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Echo Discovery">
+    <meta name="application-name" content="Echo Discovery">
+    <meta name="msapplication-TileColor" content="#feebeb">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icons/mstile-144x144.png">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <title>Echo Discovery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
